# subdir-objects: With this option, Automake places object files into subdirectories corresponding to their source file's directory, which helps avoid filename clashes and keeps the build directory cleaner.
# foreign: Tells Automake not to require all GNU files (NEWS, README, AUTHORS, ChangeLog); this is useful for non-GNU projects.
AUTOMAKE_OPTIONS = subdir-objects foreign
ACLOCAL_AMFLAGS = -I m4

#############################################################################



# Specify the target library
lib_LTLIBRARIES = libcJSON.la

#############################################################################


# Donot use this
# "pkginclude_HEADERS" tells to dump these headers in "prefix/include/libname/" dir.
# this auto creates "prefix/include/cjson/cJSON.h" instead of "prefix/include/cJSON/cJSON.h"
# pkginclude_HEADERS = JSON.h cJSON_Utils.h


# Use following
# In "includedir", you can set the custom path for dumping header files with respect to prefix path
# If you want to use $(PACKAGE_NAME) as exactly case-sensetive as "cJSON", it should be manually substituted as "cJSON" in "configure.ac" file. Neither it will become "cjson". Add "AC_SUBST([PACKAGE_NAME], [cJSON])" in "cJSON/configure.ac" file.
includedir = $(prefix)/include/$(PACKAGE_NAME)

# Then tell the automake, which header files are to be dumped in "includedir" path
include_HEADERS = \
	cJSON.h \
	cJSON_Utils.h


#############################################################################


pkgconfigdir = $(pkgconfig_libdir)
pkgconfig_DATA = $(pkgconfig_libfile)

#############################################################################


# When you run "make distclean", ensures they are deleted.
# They are generated by "./configure" command
DISTCLEANFILES = \
	cJSON.pc \
	cJSON.pc.in \
	cJSON-uninstalled.sh \
	cJSON-uninstalled.pc




# # This hook handles the dumping process in "--prefix=" path
# # $(PACKAGE_NAME)=cJSON
# # "cJSON.h, cJSON_Utils.h" goes to "prefix/include/cJSON/" dir (a.k.a "includedir=")
# # And "libcJSON.la" goes to "prefix/lib"
# # $(libdir)=prefix/lib
# # Ensures the "libcJSON.la" goes/installed into the "prefix/lib/" folder
install-data-local:
	@echo "Headers will be installed to: $(includedir)"
	@echo "Printing PACKAGE_NAME= $(PACKAGE_NAME) & libdir=$(libdir)"
	@test -z "$(DESTDIR)$(libdir)/$(PACKAGE_NAME)" || $(mkdir_p) "$(DESTDIR)$(libdir)/$(PACKAGE_NAME)"



# # This also works
# # "install-data-local" make sures
# # "cJSON.h, cJSON_Utils.h" goes to "prefix/include/cJSON/" dir
# # And "libcJSON.la" goes to "prefix/lib"
# # $(libdir)=prefix/lib
# # Ensures the "libcJSON.la" goes/installed into the "installation/lib/" folder
# # $(PACKAGE_NAME)=cJSON
# # $(includedir)=prefix/include
# install-data-local:
# 	@echo "Headers will be installed to: $(includedir)"
# 	$(mkdir_p) $(includedir)/$(PACKAGE_NAME)
# 	$(INSTALL_DATA) $(srcdir)/cJSON.h $(includedir)/$(PACKAGE_NAME)
# 	$(INSTALL_DATA) $(srcdir)/cJSON_Utils.h $(includedir)/$(PACKAGE_NAME)
# 	@echo "Printing PACKAGE_NAME= $(PACKAGE_NAME) & libdir=$(libdir)"
# 	@test -z "$(DESTDIR)$(libdir)/$(PACKAGE_NAME)" || $(mkdir_p) "$(DESTDIR)$(libdir)/$(PACKAGE_NAME)"






# Include directories for header files
AM_CPPFLAGS = -I$(builddir)
AM_CFLAGS = $(CFLAGS_WARN)

#############################################################################

libcJSON_la_CPPFLAGS = -I$(builddir)
libcJSON_la_SOURCES = \
	cJSON.c \
	cJSON_Utils.c


# When you run "make distclean", ensures they are deleted.
MAINTAINERCLEANFILES 	=			\
	Makefile.in				\
	aclocal.m4				\
	configure				\
	$(AUX_DIST)

# When you run "make distclean", ensures they are NOT touched/deleted/changed/counted in the build rules.
EXTRA_DIST = fuzzing library_config tests README.md valgrind.supp CMakeLists.txt appveyor.yml




# Specify any compiler flags you might need.
# This is optional and can be adjusted as per your project's needs.
# AM_CFLAGS = -Wall
